cambios finales para merge con master para entregar final

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <script src="https://kit.fontawesome.com/6eb30aa73f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="./index.html"> <img src="./assets/imagenes/Logo final.png" alt="Logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-lg"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -46,8 +47,10 @@
         <main>
              <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO CONSIDERANDO QUE ES COMO UN RESUMEN DE LO QUE PODES ENCONTRAR-->
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">Recomendados </h2>
-            <p class="parrafoH2">Encontra aquí nuestras recomendaciones con la mejor calidad y el mejor precio de la web. Trabajo exclusivo de nuestros editores top ranked.    </p>
+            <div  class="claseH2">
+                <h2 class="estiladoH2">RECOMENDADOS </h2>
+            </div>
+            <p class="parrafoH2">Encontra nuestras recomendaciones sobre streaming, gaming, hardware y las historias completas de tus juegos favoritos con la mejor calidad y el mejor precio de la web. Trabajo exclusivo de nuestros editores top ranked.    </p>
             <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
             <section class="container contenedorFlex">
                 <div class="row">
@@ -57,12 +60,12 @@
                         <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento" loading="lazy">
+                        <img src="./assets/imagenes/ibai final.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento" loading="lazy">
                         <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
                         <a href="https://www.twitch.tv/ibai" class="linksExternos" target="_blank">ibai Twitch</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodrigue - humor y entretenimiento" loading="lazy">
+                        <img src="./assets/imagenes/lucas final.jpg" class="boxImg" alt="luquitarodrigue - humor y entretenimiento" loading="lazy">
                         <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
                         <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
                     </div>
@@ -108,7 +111,7 @@
                     <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg" alt="Resident evil 2" loading="lazy">
+                    <img src="./assets/imagenes/RE 2 final.webp" class="boxImg" alt="Resident evil 2" loading="lazy">
                     <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
                     <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos" target="_blank">Resident Evil 2: Remake - Steam</a>
                 </div>
@@ -118,7 +121,7 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
+                    <img src="./assets/imagenes/wow final.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
                     <br>
                     <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos" target="_blank">World of Warcraft</a>
                 </div>
