--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="description" content="Sumate a la comunidad de gaming mas completa e interactiva. Recibí nuestras noticias y actualizaciones de tus tópicos favoritos.">
         <meta name="keywords"  content="SUSCRIPCION, EVENTOS, PROXIMAMENTE">
-        <title>The Gamer's Shire | Sumate a nuestra comunidad y ayudanos a contruir</title>
+        <title>The Gamer's Shire | Sumate a nuestra comunidad </title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <script src="https://kit.fontawesome.com/6eb30aa73f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-lg"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -46,27 +47,29 @@
         <main>          
              <!--COLOQUE EL CONTENIDO MAS IMPORTARTE DE ESTA SECCION COMO ES EL FORMULARIO PARA SUSCRIBIRSE-->
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">Contacto</h2>
+            <div class="claseH2">
+                <h2 class="estiladoH2">CONTACTO</h2>
+            </div>
             <section class="container contenedorFlex">
                 <div class="row">
                     <h3 class="subtitulos3Contactos mt-5 col-sm-12 col-md-6 col-lg-3">Suscribite Hoy!</h3>
-                <p class=" parrafos mt-5  col-sm-12 col-md-6 col-lg-5">- Unite a la comarca y con tu suscripcion mensual recibi nuestras ofertas, sorteos, noticias sobre el mundo de la tecnologia y el gaming y muchos beneficios mas. Te esperamos para ser parte de nuestra familia.</p>
+                <p class=" parrafos mt-5  col-sm-12 col-md-6 col-lg-5">- Unite a la comarca y con tu suscripción mensual recibí nuestras ofertas, sorteos, noticias sobre el mundo de la tecnología y el gaming y muchos beneficios mas. Te esperamos para ser parte de nuestra familia.</p>
                 <form class="col-sm-12 col-md-6 col-lg-3">
                     <div>
-                        <input type="text" class="claseH2 formulario" placeholder="Ingrese su Nombre*" required>
+                        <input type="text" class="estiloInputForm formulario" placeholder="Ingrese su Nombre*" required>
                     </div>
                     <div>
-                        <input type="email" class="claseH2 formulario" placeholder="Email*" required>
+                        <input type="email" class="estiloInputForm formulario" placeholder="Email*" required>
                     </div>
                     <div>
-                        <select class="claseH2 formulario">
+                        <select class="estiloInputForm formulario">
                             <option value="1"> Debito</option>
                             <option value="2">Credito</option>
                             <option value="3">Mercadopago</option>
                         </select>
                     </div>
                     <div>
-                        <input type="submit" class="claseH2 formulario value="Enviar">
+                        <input type="submit" class="estiloInputForm formulario" value="Enviar">
                     </div>
                 </form>
                 </div>
