--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="description" content="Encontra las mejores consolas al mejor precio. Vanguardia en hardware y perifericos; en estas fiestas no te olvides de tu gamers queridos y regalales las mejores giftcads de las mas amplias plataformas, todo a un click de distancia. Sumate a la comunidad de gaming mas completa e interactiva.">
         <meta name="keywords"  content="GAMING, CONSOLAS, HARDWARE, GIFTCARDS">
         <title>The Gamer's Shire| Lo que necesitas en gaming</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <script src="https://kit.fontawesome.com/6eb30aa73f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="Logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-lg"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -46,15 +47,17 @@
         <main>
              <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO-->
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">GAMING</h2>
-            <p class="parrafoH2">Encontrá las consolas mejores rankeadas, pero no nos quedamos ahi encontra todos los componentes al mejor precio para armar tu PC gamer. Y como si fuera poco te dejamos Giftcards a precio de descuento para que puedas regalar estas fiestas</p>
-            <h3 class="subtitulos3 boxSubtitulos">Consolas</h3>
+            <div class="claseH2">
+                <h2 class="estiladoH2">GAMING</h2>
+            </div>
+            <p class="parrafoH2">Encontrá las consolas mejores rankeadas, pero no nos quedamos ahi encontra todos los componentes al mejor precio para armar tu PC gamer. Y como si fuera poco te dejamos Giftcards a precio de descuento para que puedas regalar estas fiestas.</p>
+            <h3 class="subtitulos3 boxSubtitulos">Consolas: última generación </h3>
             <section  class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <img src="../assets/imagenes/xbox.webp" class="boxImg" alt="X box Serie X" loading="lazy">
                         <h4  class="subtitulos4">Microsoft Xbox Series X 1tb Standard Negro</h4>
-                        <a href="https://articulo.mercadolibre.com.ar/MLA-1141241177-microsoft-xbox-series-x-1tb-standard-negro-_JM?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=139714998371&matt_match_type=&matt_network=g&matt_device=c&matt_creative=585541187518&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=234834501&matt_product_id=MLA1141241177&matt_product_partition_id=1636168139489&matt_target_id=aud-1659384947926:pla-1636168139489&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfWYdKmjUZT9coiMKCH-Uy3q67lrAVcf3N5sID3aeg9Wh0SFabrqhcAaApV2EALw_wcB" class="linksExternos" target="_blank">X Box Serie XS</a>
+                        <a href="https://www.mercadolibre.com.ar/microsoft-xbox-series-x-1tb-standard-color-negro/p/MLA16160759?pdp_filters=category:MLA438566#searchVariation=MLA16160759&position=2&search_layout=stack&type=product&tracking_id=1629ff41-d654-4f97-9d00-851028d3d4dd" class="linksExternos" target="_blank">X Box Serie XS</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
                         <img src="../assets/imagenes/Play Station 5.webp" class="boxImg" alt="Play Station 5" loading="lazy">
@@ -73,7 +76,7 @@
                     </div>
                 </div>              
             </section>
-            <h3 class="subtitulos3 boxSubtitulos">Hardware</h3>
+            <h3 class="subtitulos3 boxSubtitulos">Hardware: ofertas actualizadas</h3>
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
