--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="description" content="Encontra a los streamers del momento, a los mas especilizados en tus juegos y lore favoritos. Relajate con los mejores canales de musica elegidos por la comunidad. Sumate a la comunidad de gaming mas completa e interactiva.">
         <meta name="keywords"  content="STRAMERS, STREAMING, FAVORITOS, MUSICA, POLITICA, REBORD, RODRIGUEZ, GALATTI">
         <title>The Gamer's Shire | Reencotrate con tus Streamers favoritos</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <script src="https://kit.fontawesome.com/6eb30aa73f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-lg"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -45,7 +46,9 @@
         </header>
         <main>
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">Streaming</h2>
+            <div class="claseH2">
+                <h2 class="estiladoH2">STREAMING</h2>
+            </div>
             <p class="parrafoH2">Te presentamos a los TOP RANKED Streamers y sus canales especializados en tus juegos favoritos, aprende de ellos como juegan los profesionales. No solo nos gustan los juegos, sino también diversos contenidos.Nuestros moderadores seleccionan los mejores canales para darle mayor variedad a tu entretenimiento; encontrá canales desde humoristicos hasta politicos. </p>
             <h3 class="subtitulos3 boxSubtitulos">Canales Especializados</h3>
             <section  class="container contenedorFlex">
@@ -92,11 +95,11 @@
                     </div>
                 </div>
             </section>
-            <h3 class="subtitulos3 boxSubtitulos">Musica</h3>
+            <h3 class="subtitulos3 boxSubtitulos">Musica: top Twitch channels</h3>
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="../assets/imagenes/djmiss shelton.png" class="boxImg" alt="Dj Miss Shelton" loading="lazy">
+                    <img src="../assets/imagenes/dj final.jpg" class="boxImg" alt="Dj Miss Shelton" loading="lazy">
                     <h4   class="subtitulos4">DJMissShelton - DJ Party</h4>
                     <a href="https://www.twitch.tv/djmissshelton" class="linksExternos" target="_blank">DjMissShelton</a>
                 </div>
