--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos: las mejores y mas acertadas reseñas y criticas; todo el lore para que no te pases por alto nada y puedas sacarle todo el jugo al gameplay. Sumate a la comunidad de gaming mas completa e interactiva.">
         <meta name="keywords"  content="JUEGOS, FISICOS, DIGITALES, LORE, RESEÑAS, CRITICAS">
-        <title>The Gamer's Shire | Precios óptimos en videojuegos fisicos o digitales</title>
+        <title>The Gamer's Shire | Precios óptimos en videojuegos</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <script src="https://kit.fontawesome.com/6eb30aa73f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -19,7 +20,7 @@
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-lg"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -46,8 +47,10 @@
         <main>
              <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO-->
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">Videojuegos</h2>
-            <p class="parrafoH2">Encontrá toda nuestra selección de juegos fisicos y digitales con nuestro descuento de navidad, también contamos con todo el lore de tus juegos favoritos y todas las reseñas y criticas que necesitas saber antes de llevarte un título</p>
+            <div class="claseH2">
+                <h2 class="estiladoH2">VIDEOJUEGOS</h2>
+            </div>
+            <p class="parrafoH2">Encontrá toda nuestra selección de juegos fisicos y digitales con nuestro descuento de navidad, también contamos con todo el lore de tus juegos favoritos y todas las reseñas y criticas que necesitas saber antes de llevarte un título.</p>
             <h3 class="subtitulos3 boxSubtitulos">Nuestras copias digitales</h3>
             <section class="container contenedorFlex">
                 <div class="row">
@@ -72,7 +75,7 @@
                         <a href="https://store.steampowered.com/app/292030/The_Witcher_3_Wild_Hunt/"  class="linksExternos" target="_blank">The Witcher 3: Wild Hunt</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5">
-                        <img src="../assets/imagenes/overwatch 2.jpg" class="boxImg" alt="Overwatch 2" loading="lazy">
+                        <img src="../assets/imagenes/Overwatch-2 final.jpg" class="boxImg" alt="Overwatch 2" loading="lazy">
                         <h4   class="subtitulos4">Free to play: Overwatch 2</h4>
                         <a href="https://overwatch.blizzard.com/es-es/"  class="linksExternos" target="_blank">Overwatch 2</a>
                     </div>
@@ -82,7 +85,7 @@
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/Wow 2.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
+                        <img src="../assets/imagenes/wow final.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
                         <h4   class="subtitulos4">Historia completa: World of Warcraft</h4>
                         <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"   class="linksExternos" target="_blank">World of Warcraft</a>
                     </div>
@@ -102,7 +105,7 @@
                         <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5"> 
-                        <img src="../assets/imagenes/overwatch lore.jpg" class="boxImg" alt="Overwatch" loading="lazy">
+                        <img src="../assets/imagenes/Overwatch-1 final.png" class="boxImg" alt="Overwatch" loading="lazy">
                         <h4   class="subtitulos4">Lore completo - Overwatch</h4>
                         <a href="https://altertime.es/category/lore-de-overwatch" class="linksExternos" target="_blank">Lore Overwatch</a>
                     </div>
@@ -138,7 +141,7 @@
                     Eres un Exiliado esforzándote por sobrevivir en el oscuro continente de Wraeclast mientras luchas para conseguir poder que te permitirá vengarte de quienes te hicieron daño.
                      Creado por jugadores expertos, Path of Exile es un RPG de Acción online que se desarrolla en un oscuro mundo de fantasía. 
                      Enfocado en la acción de combate visceral, ítems poderosos y una enorme personalización de personajes, Path of Exile es completamente gratis y nunca será pay-to-win. </p>
-                <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" class="linksExternosSection"  target="_blank">mas info</a>
+                <a href="https://store.steampowered.com/app/238960/Path_of_Exile/" class="linksExternosSection"  target="_blank">mas info</a>
             </section>
         </section>
 <!--FOOTER CON ANIMACIONES EN LAS REDES SOCIALES-->   
