--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -161,8 +161,8 @@
                         <p class="parrafos">Todos los derechos reservados - JDL®</p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <a class="linksFooter" href="" >Condiciones de uso</a>
-                        <a class="linksFooter" href="">Aviso de privacidad </a>
+                        <a class="linksFooter" href="https://terminosya.com/generador-terminos-y-condiciones?gclid=Cj0KCQiAwJWdBhCYARIsAJc4idB9lnI9ySuD-UebOlNM2HtS2aeNHEj1DHZbyl1EKarq1LbZlkQAVwMaAljPEALw_wcB" >Condiciones de uso</a>
+                        <a class="linksFooter" href="https://politicadeprivacidadplantilla.com/">Aviso de privacidad </a>
                     </div>
                 </div>
             </footer>
